crates/search/tests/settings/snapshots/vectors.rs/bad_parameters_2/ollama-url-sending_result.snap
---
source: crates/indexsearch/tests/settings/vectors.rs
---
{
  "taskUid": "[taskUid]",
  "indexUid": "test",
  "status": "enqueued",
  "type": "settingsUpdate",
  "enqueuedAt": "[enqueuedAt]"
}
